--- a/public/estilos.css
+++ b/public/estilos.css
@@ -90,16 +90,36 @@ h1 { margin-top: -0.5%; }
   padding: 0 20px;
   flex: 1;
   position: relative;
-  height: 89%;
+  height: 90%;
 }
 .video-container
 {
     height: 98.1%;
 }
 
+#video1
+{
+    position: absolute;
+    width: 48%;
+    height: 81%;
+    transform: translate(-50%, -50%);
+    left: 23.6%;
+    top: 49%;
+}
+
+#video2
+{
+    position: absolute;
+    width: 48%;
+    height: 81%;
+    transform: translate(-50%, -50%);
+    /* left: 76.5%; */
+    /* top: 49%; */
+}
+
 #nickname
 {
-    margin-bottom: 20%;
+    margin-bottom: 7%;
     width: 175px;
     position: relative;
     left: 27%;
@@ -114,7 +134,8 @@ h1 { margin-top: -0.5%; }
   transform: translate(-50%, -50%);
   top: 6%;
   text-align: center;
-  width: 160px; 
+  width: 160px;
+  height: 6%;
 }
 
 #id-sala
@@ -149,7 +170,9 @@ button
   position: absolute;
   left: 85%;
   transform: translate(-50%, -50%);
-  top: 6%;  
+  top: 6%;
+  width: 19%;
+  font-size: 18pt; 
 }
 
 #btn-criar
@@ -166,11 +189,11 @@ button
   position: absolute;
   left: 0.2%;
   transform: translate(0%, 50%);
-  top: 87%;
-  width: 20.3%; 
+  top: 90.5%;
+  width: 18.6%; 
 }
 
-#div-scroll
+#chat
 {
     overflow-y: scroll;
     scroll-behavior: smooth;    
