--- a/public/estilos.css
+++ b/public/estilos.css
@@ -85,18 +85,6 @@ h1 { margin-top: -0.5%; }
     transition: background-color 0.5s ease;
 }
 
-.video-chat-container 
-{
-  padding: 0 20px;
-  flex: 1;
-  position: relative;
-  height: 90%;
-}
-.video-container
-{
-    height: 98.1%;
-}
-
 #nickname
 {
     margin-bottom: 7%;
@@ -110,7 +98,7 @@ h1 { margin-top: -0.5%; }
 #txt-roomid
 {
   position: absolute;
-  left: 66%;
+  left: 74%;
   transform: translate(-50%, -50%);
   top: 6%;
   text-align: center;
@@ -120,7 +108,7 @@ h1 { margin-top: -0.5%; }
 
 #id-sala
 {
-    margin-left: 54%;
+    margin-left: 60%;
     margin-top: -3.5%;    
 }
 
@@ -148,10 +136,10 @@ button
 #btn-entrar
 {
   position: absolute;
-  left: 85%;
+  left: 92%;
   transform: translate(-50%, -50%);
   top: 6%;
-  width: 19%;
+  width: 13%;
   font-size: 18pt; 
 }
 
@@ -197,7 +185,7 @@ button
   height: 45px;
 }
 
-.videoContainer 
+/* .videoContainer 
 {
   position: relative;
   overflow: hidden;
@@ -215,6 +203,19 @@ button
   bottom: 0;
   height: auto;
   width: 100%;
+} */
+
+/* Tratativas dos vídeos */
+.video-chat-container 
+{
+  padding: 0 20px;
+  flex: 1;
+  position: relative;
+  height: 90%;
+}
+.video-container
+{
+    height: 98.1%;
 }
 
 #videos-remotos
@@ -229,9 +230,10 @@ button
     box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.2);
     align-content: center;
     color: #595354;
+    text-align: center;
 }
 
-video
+#video-local video
 {
     width: 100%;
     border-radius: 15px; 
@@ -240,25 +242,25 @@ video
 
 #video-local 
 {
-  position: absolute;
-  transform: translate(-50%, -50%);
-  top: 101%;
-  left: 87%;
-  /* border: 1px solid #cddfe7; */
-  /* right: 40px; */
-  box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.2);
-  border-radius: 5px;
-  width: 298px;
-  height: 130px;
-  /* border-radius: 15px; */
-  /* padding: 5px; */
+    position: absolute;
+    transform: translate(-50%, -50%);
+    top: 101%;
+    left: 87%;
+    /* border: 1px solid #cddfe7; */
+    /* right: 40px; */
+    box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.2);
+    border-radius: 5px;
+    width: 298px;
+    height: 130px;
+    /* border-radius: 15px; */
+    /* padding: 5px; */
 }
 
 #video1
 {
-    position: absolute;
     width: 46%;
     height: 81%;
+    position: absolute;    
     transform: translate(-50%, -50%);
     left: 23.6%;
     top: 49%;    
@@ -266,14 +268,57 @@ video
 
 #video2
 {
-    position: absolute;
     width: 46%;
     height: 81%;
+    position: absolute;    
     transform: translate(-50%, -50%);
     left: 76.5%;
     top: 49%;
-    display: inline-flex;
+    display: inline-block;
 }
+
+.videoLabel 
+{
+    color: white;
+    font: bold 18px Arial, Sans-Serif;
+    line-height: 18px;
+    height: 18px;
+    
+    background: rgba(0, 0, 0, 0.55);
+    
+    position: absolute;
+    transform: translate(-50%, -50%);
+    top: 4%;
+    left: 4%;    
+    padding: 1px;
+}
+
+.video-div 
+{
+	border-radius: 5px;
+	border: 1px solid black;
+	margin: 0 4.16%;
+	width: 25%;
+	overflow: hidden;
+  display: inline-block;
+  height: 49%;
+}
+
+.video-div video 
+{ 
+    width: 100%;
+    height: 90%;
+}
+
+.video-div h2 
+{
+	  border-top: 5px solid #080808;
+    padding: 0 10px;
+    /* margin: 0; */
+    margin-top: -18px;
+    overflow: hidden;
+}
+/* FIM vídeos */
 
 /* Grid Container */
 /* .grid { display: grid; }
